--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Index</title>
-	<script src="scripts/terrainVehicle.js"></script>
+	<script src="scripts/vehicle.js"></script>
 	<script src="scripts/allTerrainVehicle.js"></script>
 	<script src="scripts/allTerrainCarrierVehicle.js"></script>
 </head>
