--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -7,6 +7,8 @@
 	<script src="scripts/vehicle.js"></script>
 	<script src="scripts/allTerrainVehicle.js"></script>
 	<script src="scripts/allTerrainCarrierVehicle.js"></script>
+	<script src="scripts/repulsorliftVehicle.js"></script>
+	<script src="scripts/speederBike.js"></script>
 </head>
 
 <body>
